2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/sctp/sctp2.c: final mods
	* src/modules/m2pa/m2pa_sl.c: final mods

	* src/modules/m2pa/m2pa_sl.c: careful not to flush timers
	* src/modules/sccp/sccp.c: careful not to flush timers

2007-05-17  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: check for nf_reset
	* src/modules/inet/inet.c: raiontalize to strinet package
	* src/modules/inet/rawip.c: raiontalize to strinet package
	* src/modules/inet/tcp.c: raiontalize to strinet package
	* src/modules/inet/udp.c: raiontalize to strinet package
	* src/modules/m2pa/m2pa_sl.c: use mi_timer_requeue to requeue mi timers
	* src/modules/mtp/mtp.c: use mi_timer_requeue to requeue mi timers
	* src/modules/mtp/mtp_min.c: use mi_timer_requeue to requeue mi timers
	* src/modules/sccp/sccp.c: use mi_timer_requeue to requeue mi timers
	* src/modules/sctp/sctp2.c: rationalize to strsctp package
	* src/modules/sl/slpmod.c: use mi_timer_requeue to requeue mi timers
	* src/modules/x400p-ss7/sl_x400p.c: use mi_timer_requeue to requeue mi timers

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man7/cci_sipt.7.man: updated manual page
	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: updated release files
	* doc/manual/news.texi: updated release files
	* NEWS: updated release files
	* README: updated release files
	* README-cvs: updated release files
	* THANKS: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strss7.spec.in: make GPL version more obvious

2007-05-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man8/perftest.8.man: updated perftest program
	* src/test/perftest.c: updated perftest program

	* doc/drafts/m2pa/draft-bidulock-sigtran-m2pa-ig-02.me: added next
	  version of M2PA IG

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite-inet_raw.at: testsuite factoring
	* tests/testsuite-inet_raw2.at: testsuite factoring