@@ -6,6 +6,8 @@
 	* src/modules/m2pa/m2pa_sl.c: careful not to flush timers
 	* src/modules/sccp/sccp.c: careful not to flush timers
 
+	* tests/testsuite.at.in: added missing test case functions
+
 2007-05-17  Brian Bidulock  <bidulock@openss7.org>
 
 	* acinclude.m4: check for nf_reset
